1.0.0/_sources/scripts/merge_otu_maps.txt
.. _merge_otu_maps:

.. index:: merge_otu_maps.py

*merge_otu_maps.py* -- Merge OTU mapping files
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

**Description:**

This script merges OTU mapping files generated by `denoise.py <./denoise.html>`_ and/or `pick_otus.py <./pick_otus.html>`_

For example, if otu_map1.txt contains:

=   ====    ====    ====
0   seq1    seq2    seq5
1   seq3    seq4    
2   seq6    seq7    seq8
=   ====    ====    ====

and otu_map2.txt contains:

=== =   =
110 0   2
221 1
=== =   =

The resulting OTU table will be:

=== ====    ====    ====    ====    ====    ====
110 seq1    seq2    seq5    seq6    seq7    seq8
221 seq3    seq4
=== ====    ====    ====    ====    ====    ====



**Usage:** :file:`merge_otu_maps.py [options]`

**Input Arguments:**

.. note::

	
	**[REQUIRED]**
		
	-i, `-`-otu_map_fps
		The otu map filepaths, comma-separated and ordered as the OTU pickers were run [REQUIRED]
	
	**[OPTIONAL]**
		
	-o, `-`-output_fp
		Path to write output OTU map [REQUIRED]


**Output:**

The result of this script is an OTU mapping file.


**Example:**

If the seq_ids in otu_table2.txt are otu_ids in otu_table1.txt, expand the seq_ids in otu_table2.txt to be the full list of associated seq_ids from otu_table1.txt. Write the resulting otu table to otu_table.txt (-o).

::

	merge_otu_maps.py -i otu_map1.txt,otu_map2.txt -o otu_table.txt


